--- a/style.css
+++ b/style.css
@@ -56,15 +56,17 @@
     box-shadow: 3px 2px 4px rgba(12, 112, 242, 0.25);
 }
 
+/*Body Page*/
 #centerBody {
     width: auto;
-    height: 2203px;
+    height: auto;
     background: linear-gradient(180deg, rgba(12, 112, 242, 0.5) 19.91%, rgba(12, 112, 242, 0) 24.84%), #303030;
     border: 1px solid #BABABA;
+    padding-bottom: 10%;
 }
 
 #centerBody h1 {
-    margin-top: 99px;
+    margin-top: 39px;
     font-family: Inter;
     font-weight: 800;
     font-size: 80px;
@@ -74,7 +76,7 @@
 
 #centerBody p {
     margin-top: 52px;
-    margin-bottom: 150px;
+    padding-bottom: 250px;
     font-family: Inter;
     font-weight: 500;
     font-size: 40px;
@@ -146,7 +148,82 @@
     line-height: 30px;
     margin-left: 14px;
     text-align: center;
+    color: #FFFFFF;
+}
+
+/*basePage*/
+footer {
+    text-align: center;
+    height: auto;
+    background: #0C70F2;
+    color: #FFFFFF;
+}
+
+footer h5 {
+    width: 250px;
+    margin-top: 46px;
+    border-radius: 10px;
+    height: 30px;
+    background-color: #303030;
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 800;
+    font-size: 25px;
+    text-align: center;
+
+}
+
+footer ul {
+    list-style: none;
+
+}
+
+footer ul li {
+    list-style: none;
+    text-align: center;
+    margin-top: 16px;
+
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 800;
+    font-size: 25px;
+    line-height: 30px;
 
     color: #FFFFFF;
+}
 
+footer .leftFooter {
+    display: flex;
+    justify-content: space-around;
+    gap: 50px;
+
+}
+
+footer .rightFooter {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+footer a {
+    color: #ffffff;
+    text-decoration: none;
+}
+
+footer a:hover {
+    color: #FFFFFF;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+.direitos {
+    padding-top: 100px;
+    padding-bottom: 8px;
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 25px;
+    line-height: 30px;
+    text-align: center;
+    color: #FFFFFF;
 }
